external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/colon_colon_incomplete.ide.exp
note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:1:1
   │  
 1 │ ╭ module a::m {
 2 │ │ 
 3 │ │     public enum SomeEnum {
 4 │ │         SomeVariant,
   · │
20 │ │ 
21 │ │ }
   │ ╰─^ Possible in-scope names: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'Self -> a::m', 'option -> std::option', 'vector -> std::vector', 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:10:9
   │
10 │         a::
   │         ^ Possible in-scope names: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'Self -> a::m', 'option -> std::option', 'vector -> std::vector', 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:10:9
   │
10 │         a::
   │         ^ Expected fully defined access chain in this position, not an address

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:11:5
   │
11 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:14:9
   │
14 │         a::m::
   │         ^ Possible in-scope names: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'Self -> a::m', 'option -> std::option', 'vector -> std::vector', 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:14:9
   │
14 │         a::m::
   │         ^^^^ Expected fully defined access chain in this position, not a module

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:15:5
   │
15 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:18:9
   │
18 │         a::m::SomeEnum::
   │         ^ Possible in-scope names: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'Self -> a::m', 'option -> std::option', 'vector -> std::vector', 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:18:9
   │
18 │         a::m::SomeEnum::
   │         ^^^^^^^^^^^^^^ Expected fully defined access chain in this position, not a module member

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:19:5
   │
19 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier

